--- a/index.html
+++ b/index.html
@@ -248,8 +248,25 @@
     <p class="muted"><b>Submission portal:</b> TBA.</p>
 
     <h2 id="organizers">Organizers</h2>
+    <div class="speaker">
+    <img class="avatar" src="https://cvg.ethz.ch/assets/images/team/Senior-Researchers/DaneilBarath_srjpeg.jpg" alt="Fabian Manhardt">
+    <div>
+    <div class="speakerTitle">Daniel Barath</div>
+    <div class="speakerMeta">Google · <a href="mailto:fabianmanhardt@google.com">fabianmanhardt@google.com</a></div>
+    </div>
+    </div>
+
+
+    <div class="speaker">
+    <img class="avatar" src="https://media.licdn.com/dms/image/v2/C4D03AQEuEDok2XJdqg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1634231243864?e=1769644800&v=beta&t=b7-DXprsPDXhB2x2F27ttGUWexer61kk0Hx8rPBmci8" alt="Fabian Manhardt">
+    <div>
+    <div class="speakerTitle">Fabian Manhardt</div>
+    <div class="speakerMeta">Google · <a href="mailto:fabianmanhardt@google.com">fabianmanhardt@google.com</a></div>
+    </div>
+    </div>
+
     <div class="speaker" style="border-top:0">
-    <img class="avatar" src="images/organizers/marie_julie_rakotosaona.jpg" alt="Marie-Julie Rakotosaona">
+    <img class="avatar" src="https://media.licdn.com/dms/image/v2/C5103AQGjU4rRMA9xSA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1517043385695?e=2147483647&v=beta&t=lTb_PpWTGOxKxaG2cW_NTBig6gqR4FWhQDc6voZN6Ro" alt="Marie-Julie Rakotosaona">
     <div>
     <div class="speakerTitle">Marie-Julie Rakotosaona</div>
     <div class="speakerMeta">Google</div>
@@ -258,16 +275,7 @@
 
 
     <div class="speaker">
-    <img class="avatar" src="images/organizers/fabian_manhardt.jpg" alt="Fabian Manhardt">
-    <div>
-    <div class="speakerTitle">Fabian Manhardt</div>
-    <div class="speakerMeta">Google · <a href="mailto:fabianmanhardt@google.com">fabianmanhardt@google.com</a></div>
-    </div>
-    </div>
-
-
-    <div class="speaker">
-    <img class="avatar" src="images/organizers/michael_niemeyer.jpg" alt="Michael Niemeyer">
+    <img class="avatar" src="https://m-niemeyer.github.io/assets/img/profile.jpg" alt="Michael Niemeyer">
     <div>
     <div class="speakerTitle">Michael Niemeyer</div>
     <div class="speakerMeta">Google</div>
@@ -276,7 +284,7 @@
 
 
     <div class="speaker">
-    <img class="avatar" src="images/organizers/federico_tombari.jpg" alt="Federico Tombari">
+    <img class="avatar" src="https://federicotombari.github.io/images/portrait.jpg" alt="Federico Tombari">
     <div>
     <div class="speakerTitle">Federico Tombari</div>
     <div class="speakerMeta">Google, TUM</div>
@@ -285,7 +293,7 @@
 
 
     <div class="speaker">
-    <img class="avatar" src="images/organizers/michael_oechsle.jpg" alt="Michael Oechsle">
+    <img class="avatar" src="https://media.licdn.com/dms/image/v2/D4E03AQGIXS5FY5UCDw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1684697240824?e=2147483647&v=beta&t=c2d2rXiOLvSkkLQCgI9tbMPgRbI6U8BXrOu5kCbVrV0" alt="Michael Oechsle">
     <div>
     <div class="speakerTitle">Michael Oechsle</div>
     <div class="speakerMeta">Google</div>
@@ -294,7 +302,7 @@
 
 
     <div class="speaker">
-    <img class="avatar" src="images/organizers/marc_pollefeys.jpg" alt="Marc Pollefeys">
+    <img class="avatar" src="https://cvg.ethz.ch/assets/images/team/faculty/MarcPollefeys_fac.jpg" alt="Marc Pollefeys">
     <div>
     <div class="speakerTitle">Marc Pollefeys</div>
     <div class="speakerMeta">ETH Zurich, Microsoft</div>
@@ -303,7 +311,7 @@
 
 
     <div class="speaker">
-    <img class="avatar" src="images/organizers/ata_celen.jpg" alt="Ata Celen">
+    <img class="avatar" src="https://gradientspaces.stanford.edu/sites/g/files/sbiybj27761/files/styles/large_square/public/media/image/03_pass_0.jpg?h=36af4cfb&itok=_Z7agkbO" alt="Ata Celen">
     <div>
     <div class="speakerTitle">Ata Celen</div>
     <div class="speakerMeta">ETH Zurich</div>
@@ -312,7 +320,7 @@
 
 
     <div class="speaker">
-    <img class="avatar" src="images/organizers/keisuke_tateno.jpg" alt="Keisuke Tateno">
+    <img class="avatar" src="https://cdn.prod.website-files.com/6818e6452b63182753105ed7/68f364540cc312bb0b9febc2_Keisuke_Tateno.jpg" alt="Keisuke Tateno">
     <div>
     <div class="speakerTitle">Keisuke Tateno</div>
     <div class="speakerMeta">Google</div>
