--- a/index.html
+++ b/index.html
@@ -237,7 +237,9 @@
 
     <h2 id="organizers">Organizers</h2>
     <div class="speaker">
-    <img class="avatar" src="https://cvg.ethz.ch/assets/images/team/Senior-Researchers/DaneilBarath_srjpeg.jpg" alt="Fabian Manhardt">
+    <a href="https://scholar.google.com/citations?user=U9-D8DYAAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer">
+    <img class="avatar" src="https://cvg.ethz.ch/assets/images/team/Senior-Researchers/DaneilBarath_srjpeg.jpg" alt="Daniel Barath">
+    </a>
     <div>
     <div class="speakerTitle">Daniel Barath</div>
     <div class="speakerMeta">ETH Zurich, Google · <a href="mailto:dbarath@ethz.ch">dbarath@ethz.ch</a></div>
@@ -246,7 +248,9 @@
 
 
     <div class="speaker">
+    <a href="https://scholar.google.com/citations?user=bERItx8AAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer">
     <img class="avatar" src="https://media.licdn.com/dms/image/v2/C4D03AQEuEDok2XJdqg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1634231243864?e=1769644800&v=beta&t=b7-DXprsPDXhB2x2F27ttGUWexer61kk0Hx8rPBmci8" alt="Fabian Manhardt">
+    </a>
     <div>
     <div class="speakerTitle">Fabian Manhardt</div>
     <div class="speakerMeta">Google · <a href="mailto:fabianmanhardt@google.com">fabianmanhardt@google.com</a></div>
@@ -254,7 +258,9 @@
     </div>
 
     <div class="speaker" style="border-top:0">
+    <a href="https://scholar.google.com/citations?user=eQ0om98AAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer">
     <img class="avatar" src="https://media.licdn.com/dms/image/v2/C5103AQGjU4rRMA9xSA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1517043385695?e=2147483647&v=beta&t=lTb_PpWTGOxKxaG2cW_NTBig6gqR4FWhQDc6voZN6Ro" alt="Marie-Julie Rakotosaona">
+    </a>
     <div>
     <div class="speakerTitle">Marie-Julie Rakotosaona</div>
     <div class="speakerMeta">Google</div>
@@ -263,7 +269,9 @@
 
 
     <div class="speaker">
+    <a href="https://scholar.google.com/citations?user=v1O7i_0AAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer">
     <img class="avatar" src="https://m-niemeyer.github.io/assets/img/profile.jpg" alt="Michael Niemeyer">
+    </a>
     <div>
     <div class="speakerTitle">Michael Niemeyer</div>
     <div class="speakerMeta">Google</div>
@@ -272,7 +280,9 @@
 
 
     <div class="speaker">
+    <a href="https://scholar.google.com/citations?user=TFsE4BIAAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer">
     <img class="avatar" src="https://federicotombari.github.io/images/portrait.jpg" alt="Federico Tombari">
+    </a>
     <div>
     <div class="speakerTitle">Federico Tombari</div>
     <div class="speakerMeta">Google, TUM</div>
@@ -281,7 +291,9 @@
 
 
     <div class="speaker">
+    <a href="https://scholar.google.com/citations?user=vMcsUNAAAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer">
     <img class="avatar" src="https://media.licdn.com/dms/image/v2/D4E03AQGIXS5FY5UCDw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1684697240824?e=2147483647&v=beta&t=c2d2rXiOLvSkkLQCgI9tbMPgRbI6U8BXrOu5kCbVrV0" alt="Michael Oechsle">
+    </a>
     <div>
     <div class="speakerTitle">Michael Oechsle</div>
     <div class="speakerMeta">Google</div>
@@ -290,7 +302,9 @@
 
 
     <div class="speaker">
+    <a href="https://scholar.google.com/citations?user=YYH0BjEAAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer">
     <img class="avatar" src="https://cvg.ethz.ch/assets/images/team/faculty/MarcPollefeys_fac.jpg" alt="Marc Pollefeys">
+    </a>
     <div>
     <div class="speakerTitle">Marc Pollefeys</div>
     <div class="speakerMeta">ETH Zurich, Microsoft</div>
@@ -299,7 +313,9 @@
 
 
     <div class="speaker">
+    <a href="" target="_blank" rel="noreferrer">
     <img class="avatar" src="https://gradientspaces.stanford.edu/sites/g/files/sbiybj27761/files/styles/large_square/public/media/image/03_pass_0.jpg?h=36af4cfb&itok=_Z7agkbO" alt="Ata Celen">
+    </a>
     <div>
     <div class="speakerTitle">Ata Celen</div>
     <div class="speakerMeta">ETH Zurich</div>
@@ -308,7 +324,9 @@
 
 
     <div class="speaker">
+    <a href="https://scholar.google.com/citations?user=ml3laqEAAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer">
     <img class="avatar" src="https://cdn.prod.website-files.com/6818e6452b63182753105ed7/68f364540cc312bb0b9febc2_Keisuke_Tateno.jpg" alt="Keisuke Tateno">
+    </a>
     <div>
     <div class="speakerTitle">Keisuke Tateno</div>
     <div class="speakerMeta">Google</div>
