--- a/index.html
+++ b/index.html
@@ -496,6 +496,18 @@
         <b><a href="https://openreview.net/pdf?id=nI7wKr4eop" target="_blank" rel="noreferrer">Object-X: Learning to Reconstruct Multi-Modal 3D Object Representations</a></b><br />
         Di Lorenzo, Gaia, Federico Tombari, Marc Pollefeys, and Daniel Barath. NeurIPS 2025. 
       </li>
+      <li>
+        <b><a href="https://openaccess.thecvf.com/content/CVPR2025/html/Ren_GEN3C_3D-Informed_World-Consistent_Video_Generation_with_Precise_Camera_Control_CVPR_2025_paper.html" target="_blank" rel="noreferrer">Gen3c: 3d-informed world-consistent video generation with precise camera control</a></b><br />
+        Ren, X., Shen, T., Huang, J., Ling, H., Lu, Y., Nimier-David, M., Müller, T., Keller, A., Fidler, S. and Gao, J., CVPR 2025. 
+      </li>
+      <li>
+        <b><a href="https://openaccess.thecvf.com/content/ICCV2025/html/Fischer_FlowR_Flowing_from_Sparse_to_Dense_3D_Reconstructions_ICCV_2025_paper.html" target="_blank" rel="noreferrer">Flowr: Flowing from sparse to dense 3d reconstructions</a></b><br />
+        Fischer, T., Bulò, S.R., Yang, Y.H., Keetha, N., Porzi, L., Müller, N., Schwarz, K., Luiten, J., Pollefeys, M. and Kontschieder, P., 2025. CVPR 2025.
+      </li>
+      <li>
+        <b><a href="https://openaccess.thecvf.com/content/CVPR2025/html/Wu_DIFIX3D_Improving_3D_Reconstructions_with_Single-Step_Diffusion_Models_CVPR_2025_paper.html" target="_blank" rel="noreferrer">Difix3d+: Improving 3d reconstructions with single-step diffusion models.</a></b><br />
+        Wu, Jay Zhangjie, Yuxuan Zhang, Haithem Turki, Xuanchi Ren, Jun Gao, Mike Zheng Shou, Sanja Fidler, Zan Gojcic, and Huan Ling. CVPR 2025.
+      </li>
     </ul>
 
     <h2 id="contact">Contact</h2>
