--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         </tr>
         <tr>
           <td>13:30 to 14:15</td>
-          <td>Keynote 1: Angjoo Kanazawa</td>
+          <td>Keynote 1: Gordon Wetzstein</td>
           <td>45 min</td>
         </tr>
         <tr>
